<resources>
    <string name="app_name">Weather Barisic</string>

    <!--  DIALOG TEXTS  -->
    <string name="location_query">Please enable device location.</string>
    <string name="open_location_settings">Location settings</string>
    <string name="cancel">Cancel</string>
    <!--  ALERTS  -->
    <string name="location_permission_not_enabled">Location permission is necessary!</string>
    <string name="back_to_exit">Press BACK again to exit</string>
    <!--  ERROR MESSAGES  -->
    <string name="network_error">Please check your internet connection.</string>
    <string name="video_loading_error">Loading video failed.</string>
    <!--  OPTIONS  -->
    <string name="refresh">Refresh</string>
    <string name="change_units">Change temperature units</string>
    <!--  DETAILS  -->
    <string name="forecast">5-day 3h forecast</string>
    <string name="details">Details</string>
    <string name="recent_news">Recent News</string>
    <string name="min_max">Max / Min</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
</resources>