<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="MainViewModel"
            type="com.barisic.weather.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_tv"
            style="@style/StatusStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/upper_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorLightWhite"
            app:layout_constraintTop_toBottomOf="@id/details_tv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/min_max_temp_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/feels_like_temp_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upper_separator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/min_max_temp_title"
                style="@style/DetailStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/min_max_temp_value"
                style="@style/StatusStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{MainViewModel.weatherHolder.main.minMaxTemp}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_max_temp_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/min_max_temp_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feels_like_temp_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/min_max_temp_layout"
            app:layout_constraintTop_toBottomOf="@id/upper_separator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feels_like_temp_title"
                style="@style/DetailStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feels_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feels_like_temp_value"
                style="@style/StatusStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{MainViewModel.weatherHolder.main.feelsLikeTemp}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feels_like_temp_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/feels_like_temp_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/middle_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorLightWhite"
            app:layout_constraintTop_toBottomOf="@id/min_max_temp_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/humidity_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/feels_like_temp_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middle_separator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/humidity_title"
                style="@style/DetailStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/humidity_value"
                style="@style/StatusStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{MainViewModel.weatherHolder.main.humidityString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/humidity_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/humidity_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pressure_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/humidity_layout"
            app:layout_constraintTop_toBottomOf="@id/middle_separator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pressure_title"
                style="@style/DetailStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pressure_value"
                style="@style/StatusStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{MainViewModel.weatherHolder.main.pressureString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressure_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pressure_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pressure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
